--- a/documentationadvanced/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -9,5 +9,6 @@ include::openshift-pipelines-tekton.asciidoc[]
 include::camelkocpserverlesseventing.asciidoc[]
 include::camelkocpserverlessservice.asciidoc[]
 include::openshift-and-quay-repository.asciidoc[]
+include::service-mesh.asciidoc[]
 
 
