--- a/documentationadvanced/ocp4devex/src/main/asciidoc/service-mesh.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/service-mesh.asciidoc
@@ -5,29 +5,28 @@ Author: Mark Roberts (feedback to mroberts@redhat.com)
 
 === Introduction
 
+OpenShift is a platform that enables developers to deliver and manage extremely complex polyglot applications covering a variety of language runtimes and underlying technologies. However, OpenShift to date has not provided controls and monitoring regarding how each application component interacts with other components within an appliction or wider enterprise. This is where the Red Hat OpenShift Service Mesh adds value to the development and operations staff responsible for applications. 
+
+Red Hat OpenShift Service mesh is comprised of a number of separate open source projects that have been tested and integrated as a whole to deliver value to the OpenShift user. Each opensource project breaks down further to specific named elements, some of which are encountered and described in the following workshop chapter. 
 
 
+==== Istio
 
-==== The Istio ingress gateway
+Istio is an implementation of the service-mesh and this component is responsible for the overall management of communication traffic between the elements of the application. The service mesh provides the manageable and measurable interaction between different services and enables teams to introduce new functionality and services in a controlled manner. One of the major benefits of the service-mesh is the fact that functionality such as Load balancing, resilience, security and observation is delivered by the mesh and not by the application. Application developers can focus in the value of their application and not how to add the resilience etc. to the application. In the earlier chapter on 'Application deployment strategies' users created a mechanism for blue/green deployments and A/B deployments to spread the load across different versions of services. These capabilities are extended further with Istio in terms of the basis for the rules that are used for traffic management. For a more detailed introduction to Istio please take a look at the free O'Reilly book 'Introducing Istio Service Mesh for Microservices' which can be downloaded from https://developers.redhat.com/books/introducing-istio-service-mesh-microservices/[here]. 
 
-All traffic entering the cluster, for all applications managed by the service mesh, uses the same istio ingress gateway. The gateway URL can be found from the istio-ingressgateway resource within the istio-system namespace.
+==== Kiali 
 
-The command below will show the hostname to be used for all interaction with applications managed by the service mesh:
+Kiali provides the observability capability to the Red Hat Service Mesh. This enables users to build a picture of service interaction, observe traffic and look in detail at the resources that are added to the OpenShit platform to create the operational service mesh. Kiali is used to understand the structure of the mesh and to gather metrics. A link is available to from Kiali to Jaeger for distributed tracing.
 
-[source]
-----
-oc get route istio-ingressgateway -n istio-system -o jsonpath='{.spec.host}{"\n"}'
-----
+==== Jaeger
 
-Save the gateway URL as an environment variable to be re-used in further commands by executing :
+Jaeger provides a detailed distributed traffic tracing capability. This shows accurately message interaction and enables teams to understand in detail the sequencing of traffic flow and to identify bottlenecks and weaknesses within the mesh.
 
-[source]
-----
-export SM_GATEWAY=$(oc get route istio-ingressgateway -n istio-system -o jsonpath='{"http://"}{.spec.host}')
-echo $SM_GATEWAY 
+=== Using Red Hat Service Mesh
 
-IS THIS NEEDED ???
-----
+The following workshop steps will show you how to create a service mesh using a simple application. The application communication will work perfectly fine with the use of OpenShift services and routes, and the introduction of the service mesh to provide more capable communication management will have no implications on the application code.
+
+The application is called layers and it is a very simple Node JS REST interface that recieves request either from an external curl command or from another version of itself. The application uses a number of environment variables that are set within the deployment yaml files. If the application instance has an environment variable called NEXT_LAYER_NAME then it will send a message to that layer. This continues down the layers of communication until an application instance is reached that does not have the environment variable. With each response the application returns its name, version identifier and IP address.
 
 ==== Create a new project for the service mesh activity
 
@@ -54,7 +53,7 @@ To add the current project as a service mesh member within the control plane cal
 oc create -f servicemeshmember.yaml
 ----
 
-=== Phase 1
+=== Phase 1 -Initial application
 
 The micro-service based application that you are about to create is very simple and uses a rest interface that can be asked to call another downstream version of itself. This can continue for as many application instances as needed to illustrate the features of the service mesh. 
 
@@ -66,7 +65,7 @@ cd phase1
 oc create -f layer1.yaml --save-config
 ----
 
-Switch to the web user interface and select the developer view for your current project. Select the topology view and you will see the application start to be created. Click on the centre of the blue circle for the application and you should see the fly out menu on the right with details of the service and the running pod. Select the pod and scroll down the details of the pod until you see a section titled 'Containers'. This should show two containers as indicated below which are the layers application container and the Istio sidecar container.
+Switch to the web user interface and select the developer view for your current project. Select the topology view and you will see the application start to be created. Click on the centre of the blue circle for the application and you should see the fly out menu on the right with details of the service and the running pod. Select the pod and scroll down the details of the pod until you see a section titled 'Containers'. This should show two containers as indicated below which are the 'layers' application container and the Istio sidecar container.
 
 image::service-mesh-01.png[Pod with application container and sidecar container]
 
@@ -104,7 +103,7 @@ export ROUTE=$(oc get route -o jsonpath='{.items[0].spec.host}{"/call-layers"}')
 for i in {1..100}; do curl $ROUTE; echo ""; sleep .2;done
 ----
 
-=== Adding Istio capability
+==== Adding Istio capability
 
 To enable the service mesh communication requires further resources to be created. The initial resources to be created are the gateway and the virtual service. The gateway resource identifies a host for which communication should be intercepted and directed to the istio-ingress gateway. The virtual service  acts as a communication director selecting traffic that matches specific criteria for routing to a destination service. The gateway and virtual service yaml content is shown in the diagram below which also shows schematically how the communication is directed.
 
@@ -138,24 +137,6 @@ NAME                                         AGE
 gateway.networking.istio.io/layer1-gateway   63s
 ----
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 === Service mesh visualisation with Kiali
 
 Red Hat Service mesh includes a component called Kiali which provides a visualisation of the components of the mesh to assist in monitoring and managing the communication processes within a micro-service based application. To find the URL for the Kiali web application enter the command :
@@ -167,17 +148,19 @@ oc get route -n istio-system -o jsonpath='{range .items[*]}{.metadata.name}{"\t"
 
 This command will list all of the system services routes for service mesh. Copy the URL for Kiali and paste it into a new browser window.
 
-Press the button to authenticate with your OpenShift credentials and then select the blue '1 application' link in the box labelled with your service-mesh-XX project.
+Press the blue 'Log In With OpenShift' button to authenticate with your OpenShift credentials and then select the blue '1 application' link in the box labelled with your service-mesh-XX project.
 
 On the left hand side of the Kiali screen select 'Graph and you should see a screen similar to that shown below :
 
 image::service-mesh-04.png[Kiali initial screen]
 
-Press the blue button with the text 'Display unused nodes' and you will see the nodes and services of the application.
+If your screen shows application nodes and services then Kiali is responding to the traffic that was sent in the 100 calls to the application a few minutes ago. Kiali will display a discovered configuration of applications and services if there has been traffic for it to observe.
 
-You will now see the layer-1 application which is broken out as the service (dotted triangle) and the application (dotted square). Press the legend button to see the key to the objects in the browser window. You will also see that the service has a virtual service associated with it.
+If the Kiali view has timed out and removed the discovered services oyu will see a screen identical to that which is shown above. In that case press the blue button with the text 'Display unused nodes' and you will see the nodes and services of the application.
 
-Press the display drop down and select the traffic animation option. Back at the terminal window start sending traffic to the service again using the for loop shell script used previously (and repeated below) :
+You will now see the layer-1 application which is broken out as the service (dotted triangle) and the application (dotted square). Press the legend button to see the key to the objects in the browser window. You will also see that the service has an Istio virtual service associated with it.
+
+Press the display drop down menu at the top of the screen and select the traffic animation option. Back at the terminal window start sending traffic to the service again using the for loop shell script used previously (and repeated below) :
 
 [source]
 ----
@@ -190,17 +173,19 @@ image::service-mesh-05.png[Kiali traffic animation]
 
 Kiali has a number of sources of information which are selected from the left hand side menu. The animation display is shown on the graph view. If the for loop to send requests to the application has ended then restart it and you may want to change the number of calls to 1000 and change the sleep delay to 0.5 or 1.0 seconds to give more traffic while you explore the user interface.
 
-On the Kiali graph view click on the service (triangle) for layer1 and you will see information about the service on the right hand side panel. The panel shows information about the messages entering and leaving the service. Click on the application for layer1, identified as v1 (square) and the right hand side panel changes to display information about the application.
+On the Kiali graph view click on the service (triangle) for layer1 and you will see information about the service on the right hand side panel. The panel shows information about the messages entering and leaving the service. Click on the application for layer1, identified as v1 (square) and the right hand side panel changes to display information about the application which only has inbound traffic.
 
-The top menu of the Graph screen has a number of different viewing modes allowing users to display information on different versions of applications, to only show services or to display the workloads. The versioned application graph is particularly useful as it groups multiple versions of applications together along with their associated services.
+The top menu of the Graph screen has a number of different viewing modes. The first drop down menu allows users to display information on different versions of applications, to only show services or to display the workloads. The versioned application graph is particularly useful as it groups multiple versions of applications together along with their associated services.
 
-The second drop down menu allows for the display of requests per second, request percentage and response time on each green communication line. The request percentage is particularly useful when splitting traffic between versions later.
+The second drop down menu allows for the display of requests per second, request percentage and response time on each communication line. The request percentage is particularly useful when splitting traffic between versions later.
 
-On the left hand side of the Kiali screen there are options to display information about applications, workloads and services. These displays show useful information on the health of the resource. The Istio Config menu shows information about the istio resources (virtual services and gateways). This is a useful source of information if something is wrong in the configuration of a resource as it will be highlighted clearly as shown below.
+The third drop down menu allows users to select which objects to display on the main screen.
+
+On the left hand side of the Kiali screen there are options to display information about applications, workloads and services. These displays show useful information on the health of the resource. The Istio Config menu shows information about the istio resources (virtual services, gateways and many other Istio related resources). This is a useful source of information if something is wrong in the configuration of a resource as it will be highlighted clearly as shown below.
 
 image::service-mesh-06.png[Virtual service with error]
 
-==== Creation of further content in the application communication chain
+=== Phase 2 - Further content in the communication chain
 
 The next phase of building the service mesh is to introduce another application and service. 
 
@@ -212,7 +197,7 @@ cd ../phase2
 oc create -f layer2.yaml --save-config
 ----
 
-You will see that two deployments are created for the two different versions of layer2, with two pods for each application.
+In the topology view of the web user interface you will see that two deployments are created for the two different versions of layer2, with two pods for each application.
 
 Create the additional virtual service for the component with the commands:
 
@@ -245,15 +230,15 @@ In the OpenShift terminal window restart the for loop to start sending http requ
 
 In most micro-service based applications messages will not conveniently display application versions or IP addresses as in this example application. Consequently Kiali visualisation is very important to show what actually happens in the 'real world'.
 
-Switch to the Kiali browser view and wait until the traffic starts to appear. You may see some extraneous traffic going to nodes that are not in the current project namespaces. These are genuine messages being send to the Istio system to provide the monitoring capabilty. To hide the unwanted nodes use a filter in the 'Hide' text field at the top of the graph and use a filter of "namespace!=service-mesh-XX". Replace XX with your user number and do not include quote characters.
+Switch to the Kiali browser view and select the graph view. Wait until the traffic starts to appear. You may see some extraneous traffic going to nodes that are not in the current project namespaces. These are genuine messages being send to the Istio system to provide the monitoring capabilty. To hide the unwanted nodes use a filter in the 'Hide' text field at the top of the graph and use a filter of "namespace!=service-mesh-XX". Replace XX with your user number and do not include quote characters.
 
-The Kiali graph view (shown below) is currently displaying the communication into layer 1 and then from layer 1 to layer 2. Layer 2 has a virtual service which is governing the conditions under which layer 2 will get any network traffic such as protocol filtering, path filtering etc. In the absence of a destination rule to govern the flow of traffic a (roughly) 50% - 50% split of traffic is seen between version 1 and version 2 of layer 2.
+The Kiali graph view (shown below) is currently displaying the communication into layer 1 and then from layer 1 to layer 2. Layer 2 has a virtual service which is governing the conditions under which layer 2 will get any network traffic such as protocol filtering, path filtering etc. In the absence of a destination rule to govern the flow of traffic a (roughly) 50% - 50% split of traffic is seen between version 1 and version 2 of layer 2. Select "Request percentage" in the second dropdown menu to see the distribution to version 1 and version 2 of layer2. Restart the for loop to send traffic in the terminal window if necessary.
 
 image::service-mesh-07.png[Kiali distribution of traffic to layer 2]
 
-==== Creation of further multi-versioned applications in the communication chain
+=== Phase 3 - Further multi-versioned applications in the communication chain
 
-The next phase of building the service mesh is to introduce a multi-versioned application and service. 
+The next phase of building the service mesh is to introduce another multi-versioned application and service. 
 
 Change directory to phase 3 and create the new application for layer 3 with the following commands:
 
@@ -308,9 +293,10 @@ spec:
       weight: 20
 ----
 
-The above will direct http traffic targetted to layer3 (spec: -> hosts: -> layer3) to the destinations subset v1 (50% of traffic), subset v2 (30% of traffic) and subset v3 (20% of traffic). At the present time no traffic is directed to subset v4. 
+The above will direct http traffic with the uri path of /call-layers, /get-info or / sent to application layer3 (spec: -> hosts: -> layer3) to the destinations subset v1 (50% of traffic), subset v2 (30% of traffic) and subset v3 (20% of traffic). At the present time no traffic is directed to subset v4. 
 
-The destination rule associated with the above virtual service is shown below : 
+The destination rule associated with the above virtual service is shown below which ties the subsets shown in the virtual service to the specific versions of the applications :
+
 [source]
 ----
 apiVersion: networking.istio.io/v1alpha3
@@ -365,7 +351,7 @@ Destination rules require a virtual services and there cannot be more destinatio
 oc create -f destination-rule-virtual-service-layer3.yaml
 ----
 
-In the previous test it was seen that there was a 50% - 50% distribution of traffic to layer 2. The command below will introduce a destination rule and add a distribution clause to the virtual service for layer 2 to distribute the traffic  80% to 20% in favour of version 1.
+In the previous test it was seen that there was a 50% - 50% distribution of traffic going into layer 2. The command below will introduce a destination rule and add a distribution clause to the virtual service for layer 2 to distribute the traffic  80% to 20% in favour of version 1.
 
 [source]
 ----
@@ -379,7 +365,7 @@ Reconfigure layer2 to send messages to layer3 using the command:
 oc apply -f layer2.yaml
 ----
 
-In the OpenShift terminal window restart the for loop to start sending http requests to layer1. You should now see that layer1 is sending requests on to layer 2 which is sending requests on to layer 3 and you should see the IP address of the nodes on which those two layers are running as shown below. You will also see a distribution of workload across layer 3 v1, v2 and v3 in the percentages defined in the virtual service.
+In the OpenShift terminal window recall the foor loop that sends messages to the applications and change the total number of messages to 200 and the sleep value from .2 to .5. This will give more time to explore the traffic in Kiali. Execute the command when the changes have been made. You should now see that layer1 is sending requests on to layer 2 which is sending requests on to layer 3 and you should see the IP address of the nodes on which those two layers are running as shown below. You will also see a distribution of workload across layer 3 v1, v2 and v3 in the percentages defined in the virtual service.
 
 [source]
 ----
@@ -410,13 +396,24 @@ In the OpenShift terminal window restart the for loop to start sending http requ
 "layer1 (v1) [10.130.2.240] ----> layer2 (v1) [10.128.2.151] ----> layer3-v3 (v3) [10.128.2.144]"
 ----
 
-Of the above 25 calls, 10 are for v1 (40%), 8 are for v2 (32%) and 7 are for v3 (28%). The distribution percentages become more accurate the more messages are sent. When 1000 calls were made in a test activit the percentage distribution was v1 : 49.3%, v2 : 31.0% and v3 : 19.7%.
+Of the above 25 calls, 10 are for v1 (40%), 8 are for v2 (32%) and 7 are for v3 (28%). The distribution percentages become more accurate the more messages are sent. When more calls are made the distribution gets closer to the desired values. 
 
 Switch to the Kiali browser view and wait until the traffic starts to appear. Onthe second to left drop down option menu at the top of the Kiali screen select the option "Requests percentage". This will show the breakdown of traffic similar to that which is shown below:
 
 image::service-mesh-09.png[OpenShift topology view of micro-services]
 
+=== Cleaning up
 
+To tidy up the cluster now that the chapter is complete please use the command
+
+[source]
+----
+oc delete project service-mesh-XX
+----
+
+_where XX is your user ID number.
+
+This will delete the projects
 
 
 
